--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,23 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 # allocator, however.
 wee_alloc = { version = "0.4.5", optional = true }
 
+js-sys = "0.3.40"
+
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+    'CanvasRenderingContext2d',
+    'Document',
+    'Element',
+    'HtmlCanvasElement',
+    'ImageData',
+    'Performance',
+    'Window'
+]
